--- a/Pear/Controllers/Onboarding/LandingScreenViewController.storyboard
+++ b/Pear/Controllers/Onboarding/LandingScreenViewController.storyboard
@@ -21,8 +21,10 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bP-dS-bgj">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="507"/>
                             </scrollView>
-                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="5aE-wz-PXH">
-                                <rect key="frame" x="168" y="470" width="39" height="37"/>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" translatesAutoresizingMaskIntoConstraints="NO" id="5aE-wz-PXH">
+                                <rect key="frame" x="160" y="478" width="55" height="37"/>
+                                <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="currentPageIndicatorTintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </pageControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BhD-Vv-GXK">
                                 <rect key="frame" x="20" y="587" width="335" height="60"/>
@@ -52,7 +54,7 @@
                         <constraints>
                             <constraint firstItem="7bP-dS-bgj" firstAttribute="top" secondItem="im2-tZ-rGb" secondAttribute="top" id="5CF-Ta-ZpN"/>
                             <constraint firstItem="BhD-Vv-GXK" firstAttribute="centerX" secondItem="PoT-HI-Elf" secondAttribute="centerX" id="ABd-GM-PR1"/>
-                            <constraint firstItem="s0e-kO-oji" firstAttribute="top" secondItem="5aE-wz-PXH" secondAttribute="bottom" constant="8" id="Cid-Xi-FPr"/>
+                            <constraint firstItem="s0e-kO-oji" firstAttribute="top" secondItem="5aE-wz-PXH" secondAttribute="bottom" id="Cid-Xi-FPr"/>
                             <constraint firstItem="PoT-HI-Elf" firstAttribute="trailing" secondItem="BhD-Vv-GXK" secondAttribute="trailing" constant="20" id="FeQ-io-NXI"/>
                             <constraint firstItem="BhD-Vv-GXK" firstAttribute="top" secondItem="s0e-kO-oji" secondAttribute="bottom" constant="12" id="G51-La-frm"/>
                             <constraint firstItem="PoT-HI-Elf" firstAttribute="trailing" secondItem="s0e-kO-oji" secondAttribute="trailing" constant="20" id="Hdi-IR-gO9"/>
